--- a/styles.css
+++ b/styles.css
@@ -105,3 +105,50 @@ article {
 }
 
 /* Desktop styles */
+@media (min-width: 1120px) {
+  main {
+    margin-top: calc((80 / 16) * 1rem);
+    margin-bottom: calc((80 / 16) * 1rem);
+    padding: 0;
+    max-width: calc((1110 / 16) * 1rem);
+  }
+  h1 {
+    font-size: var(--36px);
+    font-weight: 275;
+    letter-spacing: 0.25px;
+  }
+  main > p {
+    max-width: calc((540 / 16) * 1rem);
+    margin: 0 auto;
+  }
+  section {
+    margin-top: calc((64 / 16) * 1rem);
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    gap: calc((30 / 16) * 1rem) calc((30 / 16) * 1rem);
+    grid-auto-flow: column;
+  }
+  .rectangle {
+    height: 4px;
+  }
+  section article:nth-child(1) {
+    grid-row: 1/3;
+    align-self: center;
+  }
+  section article:nth-child(4) {
+    grid-row: 1/3;
+    align-self: center;
+  }
+  .content {
+    padding: calc((32 / 16) * 1rem) 28px;
+  }
+  .content h2 {
+    margin-bottom: calc((6 / 16) * 1rem);
+  }
+  .content img {
+    margin-top: calc((40 / 16) * 1rem);
+    width: 64px;
+    height: 64px;
+    align-self: end;
+  }
+}
